
- ref_projectable removed, no longer supported
- ref_plot3d and ref_quality removed

Mon, Jun 26, 2017 : Released Refine 1.8.18

- ref_matrix repaired jacobian cost transform
- ref_smooth edge and face optimization with ref_geom
- added acceptance tests based on github.com/UGAWG
- ref_metric 3D metric interpolated (extrapolated on boundary, not parallel)
- ref_geom geometry association cached in a .gas file
- ref_geom .egads model can be tessellated with tetgen
- ref_geom can use EGADS for geometry evaluation
- refine/one fortran interface can now store hex elements without modification
- added tetgen .smesh output format
- 3D .meshb export now uses 0 to mark vertex and tetra ids. (triangles
  continue to use face/patch id)

Tue, Aug 23, 2016 : Released Refine 1.8.17

- added ref_usm3d2fun3d_mapbc ref_fun3d2usm3d_mapbc mapbc translation scripts
- ref_translate learned --rotate

Wed, Apr 27, 2016 : Released Refine 1.8.16

- refine/two fortran binding uses a single partition
- mid plane of twod grids in now a varaible (for pointwise)
- ref_export learned to extract twod grid to meshb format
- ref_export learned tecplot .plt
- ref_translate learned --scale
- ref_inflatable learned --rotate, --scale, and --origin
- ref_fefloa2d driver and ref_bamg_emulator added
- histogram fixed and made pretty for paper
- ref_arg created to parse arguments
- ref_metric_interpolate twod adapt uses background grid to interp metric 
- ref_surf2ugrid for debuging aflr3 problems
- ref_shard_prism_into_tet paralleized
- ref_import_bin_ugrid uses blocks to read contiguously (broke and fixed tags)
- ref_part uses blocks to read contiguously (face tags hop)
- ref_part uses longs for file offsets to read big grids
- ref_gather_cell contiguous faceids for cgns conversion 
- ref_adj better realloc heuristics for increased performance

Tue, Feb  3, 2015 : Released Refine 1.8.15

- implemented isotropic gradation control of anisotropic metric
- added Barral/McKenzie metric intersection