@@ -111,7 +111,6 @@ REF_STATUS ref_node_add_many( REF_NODE ref_node, REF_INT n, REF_INT *global );
 
 REF_STATUS ref_node_remove( REF_NODE ref_node, REF_INT node );
 REF_STATUS ref_node_remove_without_global( REF_NODE ref_node, REF_INT node );
-REF_STATUS ref_node_remove_requiring_rebuild( REF_NODE ref_node, REF_INT node );
 REF_STATUS ref_node_rebuild_sorted_global( REF_NODE ref_node );
 
 REF_STATUS ref_node_compact( REF_NODE ref_node, REF_INT **o2n, REF_INT **n2o );
